fixing overflow-x

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,13 @@
-body{
+html,body{
+  overflow-x: hidden !important;
+  width: 100vw !important;
+}
+  
+
+  body{
     font-family: 'Raleway';
+    
+
   }
 
   ::-webkit-scrollbar {
